# organ-bank

./: .gitignore  .hlint.yaml  README.md  cabal-ghc914.project  cabal.project  flake.nix
.github/workflows/: ci.yml
ada-shim/: README.md  ada-shim.cabal
ada-shim/src/: Main.hs
ada-shim/src/OrganBank/: AdaShim.hs
agda-shim/: README.md  agda-shim.cabal
agda-shim/src/: Main.hs
agda-shim/src/OrganBank/: AgdaShim.hs
c-shim/: README.md  c-shim.cabal
c-shim/src/: Main.hs
c-shim/src/OrganBank/: CShim.hs
cl-shim/: README.md  cl-shim.cabal
cl-shim/scripts/: extract.lisp
cl-shim/src/: Main.hs
cl-shim/src/OrganBank/: ClShim.hs
cpp-shim/: README.md  cpp-shim.cabal
cpp-shim/src/: Main.hs
cpp-shim/src/OrganBank/: CppShim.hs
doc/: type-mapping-reference.md  writing-a-shim.md
erlang-frontend/: erlang-frontend.cabal
erlang-frontend/app/: Main.hs
erlang-frontend/src/ErlangFrontend/: AST.hs  Infer.hs  Lexer.hs  Parser.hs  ToOrganIR.hs
erlang-frontend/src/ErlangFrontend/Infer/: Types.hs
erlang-frontend/test/: factorial.erl  lists.erl  processes.erl
erlc-shim/: README.md  erlc-shim.cabal
erlc-shim/src/: Main.hs
erlc-shim/src/OrganBank/: ErlcShim.hs
forth-frontend/: forth-frontend.cabal
forth-frontend/app/: Main.hs
forth-frontend/src/ForthFrontend/: AST.hs  Lexer.hs  Parser.hs  ToOrganIR.hs
forth-frontend/test/: factorial.fs  stack.fs
fortran-shim/: README.md  fortran-shim.cabal
fortran-shim/src/: Main.hs
fortran-shim/src/OrganBank/: FortranShim.hs
fsharp-shim/: README.md  fsharp-shim.cabal
fsharp-shim/src/: Main.hs
fsharp-shim/src/OrganBank/: FSharpShim.hs
ghc-shim/: README.md  ghc-shim.cabal
ghc-shim/src/: Main.hs
ghc-shim/src/OrganBank/: GhcShim.hs
idris2-shim/: README.md  idris2-shim.cabal
idris2-shim/src/: Main.hs
idris2-shim/src/OrganBank/: Idris2Shim.hs
julia-shim/: README.md  julia-shim.cabal
julia-shim/scripts/: extract.jl
julia-shim/src/: Main.hs
julia-shim/src/OrganBank/: JuliaShim.hs
koka-shim/: README.md  koka-shim.cabal
koka-shim/src/: Main.hs
koka-shim/src/OrganBank/: KokaShim.hs
lean4-shim/: README.md  lake-manifest.json  lakefile.lean  lean4-shim.cabal
lean4-shim/OrganBank/: LcnfExtract.lean  Main.lean  OrganIR.lean
lean4-shim/src/: Main.hs
lean4-shim/src/OrganBank/: Lean4Shim.hs
lean4-shim/test/: Factorial.lean
lua-frontend/: lua-frontend.cabal
lua-frontend/app/: Main.hs
lua-frontend/src/LuaFrontend/: AST.hs  Lexer.hs  Parser.hs  ToOrganIR.hs
lua-frontend/test/: factorial.lua  oop.lua  tables.lua
mmc-shim/: README.md  mmc-shim.cabal
mmc-shim/src/: Main.hs
mmc-shim/src/OrganBank/: MmcShim.hs
ocaml-shim/: README.md  ocaml-shim.cabal
ocaml-shim/src/: Main.hs
ocaml-shim/src/OrganBank/: OcamlShim.hs
organ-diff/: organ-diff.cabal
organ-diff/src/: Main.hs
organ-extract/: organ-extract.cabal
organ-extract/src/: Main.hs
organ-ir/: CHANGELOG.md  LICENSE  organ-ir.cabal
organ-ir/app/: Validate.hs
organ-ir/bench/: Bench.hs
organ-ir/src/OrganIR/: Binary.hs  Build.hs  Json.hs  Parse.hs  Pretty.hs  Schema.hs  Transform.hs  Types.hs  Validate.hs
organ-ir/test/: BinaryRoundTrip.hs  FuzzParse.hs  Integration.hs  LargeFile.hs  PropertyRoundTrip.hs  RoundTrip.hs  Transform.hs
organ-playground/: organ-playground.cabal
organ-playground/src/: Main.hs
prolog-frontend/: prolog-frontend.cabal
prolog-frontend/app/: Main.hs
prolog-frontend/src/PrologFrontend/: Lexer.hs  Parser.hs  Term.hs  ToOrganIR.hs
prolog-frontend/test/: factorial.pl  family.pl  lists.pl
prolog-shim/: README.md  prolog-shim.cabal
prolog-shim/src/: Main.hs
prolog-shim/src/OrganBank/: PrologShim.hs
purs-shim/: README.md  purs-shim.cabal
purs-shim/src/: Main.hs
purs-shim/src/OrganBank/: PursShim.hs
rustc-shim/: Cargo.toml  README.md
rustc-shim/src/: main.rs
scala3-shim/: README.md  scala3-shim.cabal
scala3-shim/src/: Main.hs
scala3-shim/src/OrganBank/: Scala3Shim.hs
scheme-frontend/: scheme-frontend.cabal
scheme-frontend/app/: Main.hs
scheme-frontend/src/SchemeFrontend/: AST.hs  Desugar.hs  Lexer.hs  Reader.hs  ToOrganIR.hs
scheme-frontend/test/: factorial.scm  lists.scm
scheme-shim/: README.md  scheme-shim.cabal
scheme-shim/scripts/: extract.scm
scheme-shim/src/: Main.hs
scheme-shim/src/OrganBank/: SchemeShim.hs
sml-frontend/: sml-frontend.cabal
sml-frontend/app/: Main.hs
sml-frontend/src/SmlFrontend/: Basis.hs  Lexer.hs  Match.hs  Parser.hs  ToOrganIR.hs
sml-frontend/src/SmlFrontend/Elab/: Env.hs  Infer.hs  Types.hs
sml-frontend/src/SmlFrontend/Syntax/: AST.hs  Const.hs  Ident.hs
sml-frontend/test/: factorial.sml  lists.sml
sml-shim/: README.md  sml-shim.cabal
sml-shim/src/: Main.hs
sml-shim/src/OrganBank/: SmlShim.hs
spec/: interop-types.md  organ-ir-example.json  organ-ir.schema.json
spec/examples/: README.md  ada.json  agda.json  c.json  common-lisp.json  cpp.json  erlang.json  forth.json  fortran.json  fsharp.json  haskell.json  idris2.json  julia.json  koka.json  lean4.json  lua.json  mercury.json  ocaml.json  prolog.json  purescript.json  rust.json  scala3.json  scheme.json  sml.json  swift.json  zig.json
swift-shim/: README.md  swift-shim.cabal
swift-shim/src/: Main.hs
swift-shim/src/OrganBank/: SwiftShim.hs
test/: e2e-test.sh  integration-test.sh  smoke-test.sh
test/e2e-examples/: factorial.lua  factorial.sml
test/examples/: hello.adb  hello.agda  hello.c  hello.erl  hello.f90  hello.fsx  hello.fth  hello.hs  hello.idr  hello.kk  hello.lua  hello.ml  hello.pl  hello.purs  hello.scala  hello.scm  hello.sml  hello.swift
zig-shim/: README.md  zig-shim.cabal
zig-shim/src/: Main.hs
zig-shim/src/OrganBank/: ZigShim.hs
zig-shim/zig-tool/: build.zig  zir_extract.zig
