cabal-version: 3.0
name:          fortran-shim
version:       0.1.0
synopsis:      Extract GCC GIMPLE from Fortran and emit OrganIR JSON
license:       GPL-2.0-only
build-type:    Simple

executable fortran-organ
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: OrganBank.FortranShim
  build-depends:
    base >= 4.20 && < 5,
    text,
    process,
    containers,
    directory,
    filepath
  ghc-options: -Wall
