cabal-version:   2.4
name:            fsharp-shim
version:         0.1.0.0
synopsis:        F# typed AST extraction shim for OrganIR
license:         GPL-2.0-only
build-type:      Simple

common defaults
  default-language: GHC2024
  default-extensions: OverloadedStrings
  ghc-options: -Wall

executable fsharp-organ
  import: defaults
  main-is: Main.hs
  hs-source-dirs: src
  other-modules: OrganBank.FSharpShim
  build-depends:
      base >= 4.20
    , text
    , process
    , containers
    , filepath
    , organ-ir
