cabal-version:   3.0
name:            ghc-shim
version:         0.1.0.0
synopsis:        GHC Core extraction shim for OrganIR
license:         GPL-2.0-only
build-type:      Simple

common defaults
  default-language: GHC2021
  default-extensions: OverloadedStrings
  ghc-options: -Wall

executable ghc-organ
  import: defaults
  main-is: Main.hs
  hs-source-dirs: src
  other-modules: OrganBank.GhcShim
  build-depends:
      base >= 4.20
    , ghc == 9.14.*
    , text
    , bytestring
    , process
    , filepath
    , containers
