cabal-version: 3.0
name:          idris2-shim
version:       0.1.0
synopsis:      Extract Idris 2 TT/CaseTree and emit OrganIR JSON
license:       GPL-2.0-only
build-type:    Simple

executable idris2-organ
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: OrganBank.Idris2Shim
  build-depends:
    base >= 4.20 && < 5,
    text,
    process,
    containers
  ghc-options: -Wall
