cabal-version:   2.4
name:            julia-shim
version:         0.1.0.0
synopsis:        Julia typed IR extraction shim for OrganIR
license:         GPL-2.0-only
build-type:      Simple

common defaults
  default-language: GHC2024
  default-extensions: OverloadedStrings
  ghc-options: -Wall

executable julia-organ
  import: defaults
  main-is: Main.hs
  hs-source-dirs: src
  other-modules: OrganBank.JuliaShim
  build-depends:
      base >= 4.20
    , text
    , process
    , filepath
    , directory
    , organ-ir
