cabal-version:   3.0
name:            koka-shim
version:         0.1.0.0
synopsis:        Extract Koka Core IR and emit OrganIR JSON
license:         GPL-2.0-only
build-type:      Simple

executable koka-organ
  default-language: GHC2021
  default-extensions: OverloadedStrings, ImportQualifiedPost
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    OrganBank.KokaShim
  build-depends:
    base        >= 4.18 && < 5,
    text        >= 2.0,
    process     >= 1.6,
    filepath    >= 1.4
  ghc-options: -Wall -O2
