cabal-version: 3.0
name:          mmc-shim
version:       0.1.0
synopsis:      Extract Mercury HLDS and emit OrganIR JSON
license:       GPL-2.0-only
build-type:    Simple

executable mmc-organ
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: OrganBank.MmcShim
  build-depends:
    base >= 4.20 && < 5,
    text,
    process,
    containers,
    filepath,
    organ-ir
  ghc-options: -Wall
