cabal-version:   3.0
name:            ocaml-shim
version:         0.1.0.0
synopsis:        OCaml Lambda IR extraction shim for OrganIR
license:         GPL-2.0-only
build-type:      Simple

common defaults
  default-language: GHC2024
  default-extensions: OverloadedStrings
  ghc-options: -Wall

executable ocaml-organ
  import: defaults
  main-is: Main.hs
  hs-source-dirs: src
  other-modules: OrganBank.OcamlShim
  build-depends:
      base >= 4.20
    , text
    , process
    , containers
    , filepath
    , organ-ir
