cabal-version: 3.0
name:          organ-ir
version:       0.1.0
synopsis:      OrganIR types, builders, and JSON emission for polyglot compiler interchange
description:
  Haskell data types faithfully representing the OrganIR JSON schema,
  type-safe builder functions, and efficient Text-based JSON emission.
  Used by organ-bank frontends and shims to produce OrganIR for
  consumption by the Frankenstein polyglot compiler.
license:       GPL-2.0-only
license-file:  LICENSE
author:        Nadia Yvette Chambers
maintainer:    nadia@nadiayvette.com
homepage:      https://github.com/NadiaYvette/organ-bank
bug-reports:   https://github.com/NadiaYvette/organ-bank/issues
category:      Compiler, Language
tested-with:   GHC == 9.14.1, GHC == 9.15.20260305
build-type:    Simple
extra-doc-files: CHANGELOG.md

library
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: src
  exposed-modules:
    OrganIR.Types
    OrganIR.Build
    OrganIR.Json
    OrganIR.Parse
    OrganIR.Binary
    OrganIR.Schema
    OrganIR.Validate
    OrganIR.Pretty
    OrganIR.Transform
  build-depends:
    base >= 4.20 && < 5,
    bytestring,
    containers,
    text
  ghc-options: -Wall

executable organ-validate
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: app
  main-is: Validate.hs
  build-depends:
    base >= 4.20 && < 5,
    bytestring,
    text,
    organ-ir
  ghc-options: -Wall

test-suite property-roundtrip
  type: exitcode-stdio-1.0
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: test
  main-is: PropertyRoundTrip.hs
  build-depends:
    base >= 4.20 && < 5,
    text,
    organ-ir,
    QuickCheck
  ghc-options: -Wall

test-suite roundtrip
  type: exitcode-stdio-1.0
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: test
  main-is: RoundTrip.hs
  build-depends:
    base >= 4.20 && < 5,
    text,
    organ-ir
  ghc-options: -Wall

benchmark bench
  type: exitcode-stdio-1.0
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: bench
  main-is: Bench.hs
  build-depends:
    base >= 4.20 && < 5,
    bytestring,
    text,
    organ-ir,
    tasty-bench
  ghc-options: -Wall -O2

test-suite integration
  type: exitcode-stdio-1.0
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: test
  main-is: Integration.hs
  build-depends:
    base >= 4.20 && < 5,
    text,
    organ-ir
  ghc-options: -Wall

test-suite transform
  type: exitcode-stdio-1.0
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: test
  main-is: Transform.hs
  build-depends:
    base >= 4.20 && < 5,
    text,
    organ-ir
  ghc-options: -Wall

test-suite fuzz-parse
  type: exitcode-stdio-1.0
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: test
  main-is: FuzzParse.hs
  build-depends:
    base >= 4.20 && < 5,
    text,
    organ-ir,
    QuickCheck
  ghc-options: -Wall

test-suite large-file
  type: exitcode-stdio-1.0
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: test
  main-is: LargeFile.hs
  build-depends:
    base >= 4.20 && < 5,
    text,
    organ-ir
  ghc-options: -Wall

test-suite binary-roundtrip
  type: exitcode-stdio-1.0
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: test
  main-is: BinaryRoundTrip.hs
  build-depends:
    base >= 4.20 && < 5,
    bytestring,
    text,
    organ-ir
  ghc-options: -Wall
