cabal-version: 3.0
name:          scheme-shim
version:       0.1.0
synopsis:      Extract Guile Tree-IL from Scheme and emit OrganIR JSON
license:       GPL-2.0-only
build-type:    Simple

executable scheme-organ
  default-language: GHC2024
  default-extensions: OverloadedStrings
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: OrganBank.SchemeShim
  build-depends:
    base >= 4.20 && < 5,
    text,
    process,
    containers,
    filepath
  ghc-options: -Wall
